added HtmlWebpackPlugin and deploy to Heroku

--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "homepage": "https://github.com/moniquemeas/contact-card#readme",
   "dependencies": {
     "concurrently": "^7.4.0"
-  }
+  },
+  "engines": {
+    "node": "17.x"
+  },
+  "heroku-prebuild": "npm install --dev"
 }
